fix(copy-btn): Adjust icon size and spacing

--- a/src/assets/scss/_components/_bot-message.scss
+++ b/src/assets/scss/_components/_bot-message.scss
@@ -37,7 +37,6 @@
 		margin-bottom: 0;
 
 		&:not(:has(.docsbot-sources-title)) {
-			margin-top: -6px;
 			margin-bottom: calc($spacing-sm * -1);
 		}
 	}
@@ -63,8 +62,8 @@
 
 		svg,
 		.docsbot-copy-icon {
-			width: 24px !important;
-			height: 24px !important;
+			width: 16px !important;
+			height: 16px !important;
 			display: block;
 		}
 
